--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "discord-stream-client",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Experiment for making video streaming work for discord selfbots",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
   "exports": {
+    "import": "./dist/index.js",
     "require": "./dist/index.js",
     "types": "./dist/index.d.ts"
   },
