--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@dank074/fluent-ffmpeg-multistream-ts": "^1.0.2",
     "@discordjs/opus": "^0.8.0",
     "fluent-ffmpeg": "^2.1.2",
+    "fluent-ffmpeg-util": "^0.2.0-alpha.1",
     "libsodium-wrappers": "^0.7.10",
     "prism-media": "^1.3.4",
     "ws": "^8.12.0"
