--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "discord-stream-client",
-  "version": "1.4.6",
+  "version": "1.4.7",
   "description": "Experiment for making video streaming work for discord selfbots",
   "main": "./dist/index.js",
   "typings": "./dist/index.d.ts",
@@ -31,7 +31,7 @@
     "ws": "^8.14.2"
   },
   "peerDependencies": {
-    "discord.js-selfbot-v13": "2.x"
+    "discord.js-selfbot-v13": "^2.x"
   },
   "keywords": [
     "discord",
